Bugfix related to word-wrap in initiative head

--- a/static/style.css
+++ b/static/style.css
@@ -500,7 +500,7 @@ h2 {
 }
 
 .web20 .issue_initiative_list .ui_tabs_accordeon_head a {
-  font-size: 125%;
+  font-size: 120%;
 }
 
 
